--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -20,6 +20,7 @@
       <section>
         <h2>We help you build your brand!</h2>
       </section>
+
       <section>
         <h2>Services</h2>
         <p>We work with you</p>
@@ -30,6 +31,7 @@
         <h3>Web Development</h3>
         <h3>Social Media</h3>
       </section>
+
       <section>
         <h2>Works</h2>
         <p>Take a look in our portfolio</p>
@@ -37,9 +39,16 @@
         <article><h3>Web Development</h3></article>
         <article><h3>Personal Brand</h3></article>
       </section>
+
       <section>
         <h2>About Us</h2>
         <p>Everything about us</p>
+        <h3>Who are we</h3>
+        <h3>Our culture</h3>
+        <h3>How we work</h3>
+      </section>
+      <section>
+        <h2>About Us</h2>
         <h3>Who are we</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis
@@ -62,14 +71,17 @@
           maxime cum!
         </p>
       </section>
+
       <section>
         <h2>Latest news</h2>
         <article>
           <p>Career</p>
           <h3>Hoc loco tenere se Triarius non potuit.</h3>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius
-          factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria
-          sunt his, malane?
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id
+            Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae
+            contraria sunt his, malane?
+          </p>
         </article>
         <article>
           <p>Digital Life</p>
@@ -88,7 +100,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur
             bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant
             Stoici cum Peripateticis. Prioris generis est docilitas, memoria;
-            Apparet statim, quae sint officia, quae actiones.
+            Apparet statim, quae sint officia, quae actiones
           </p>
         </article>
       </section>
